Added support for Au, Cu, and Pt