@@ -1,3 +1,13 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import sun.jvmstat.monitor.MonitoredVmUtil.commandLine
+import java.io.FileOutputStream
+import java.net.HttpURLConnection
+import java.net.URI
+import java.net.URL
+import java.security.MessageDigest
+import java.util.*
+
 plugins {
     kotlin("jvm") version "2.3.21"
     id("org.jetbrains.kotlin.plugin.compose") version "2.3.21"
@@ -7,7 +17,7 @@ plugins {
 }
 
 group = "com.alchitry"
-version = "1.0-SNAPSHOT"
+version = "1.0.0"
 
 repositories {
     google()
@@ -20,12 +30,13 @@ repositories {
 dependencies {
     testImplementation(kotlin("test"))
 
-    implementation("com.github.alchitry:Alchitry-Interface:2c56e79acf")
+    implementation("com.github.alchitry:Alchitry-Interface:62639d9c4c")
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.2")
 
     implementation("org.jetbrains.compose.material3:material3-desktop:1.9.0")
+    implementation("org.jetbrains.compose.material:material-icons-extended:1.7.3")
     implementation("org.jetbrains.androidx.navigation:navigation-compose:2.9.2")
     add("linuxAmd64", "org.jetbrains.compose.desktop:desktop-jvm-linux-x64:1.11.0")
     add("linuxAarch64", "org.jetbrains.compose.desktop:desktop-jvm-linux-arm64:1.11.0")
@@ -42,4 +53,40 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+fun TaskContainer.registerConveyorTask(name: String, conveyorCommand: String = name, arg: String? = null) {
+    register<Exec>(name) {
+        description = "Conveyor task"
+        group = "conveyor"
+        dependsOn("jar")
+        executable = "/home/justin/.npm-global/bin/conveyor"
+        val rootKey = secrets.get("conveyorRootKey")
+        if (arg == null) {
+            args("--passphrase=$rootKey", "make", conveyorCommand)
+        } else {
+            args("--passphrase=$rootKey", arg, "make", conveyorCommand)
+        }
+    }
+}
+
+tasks.registerConveyorTask("raspberryPi", "linux-app", "-Kapp.machines=linux.aarch64.glibc")
+tasks.registerConveyorTask("raspberryPiDeb", "linux-tarball", "-Kapp.machines=linux.aarch64.glibc")
+
+tasks.register<Exec>("copyToPi") {
+
+    description = "Copy the project to the Raspberry Pi over SSH"
+    group = "deploy"
+    dependsOn("raspberryPi")
+    executable = "rsync"
+    args("-avz", "output", "alchitry@192.168.1.177:~/")
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
